# django-htmx-tutorial-app

./: .gitmodules  README.md  django-htmx-tutorial-app.code-workspace  manage.py  pyproject.toml
.devcontainer/: devcontainer.json
app/airline_tickets/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
app/airline_tickets/dto/: flight_dto.py  flight_search_dto.py
app/airline_tickets/forms/: account_form.py  app_form.py
app/airline_tickets/migrations/: 0001_initial.py  0002_aircraft_name_airline_name_airlineticket_name.py  0002_remove_customerticket_aircraft_seat_and_more.py  0003_alter_flightroute_waypoints.py  0003_flight_company.py  0004_remove_airlineticket_airline_seat_type_and_more.py  0004_rename_company_flight_airline_company.py  0005_airlinetickettype_airlineticket_airline_ticket_type.py  0005_alter_flight_airline_company.py  0006_alter_airlineticket_airline_ticket_type.py  0006_flightseat_reserved.py  0007_aircraftseat_name.py  0007_flightseat_unique_flight_aircraft_seat.py  0008_remove_flightseat_reserved.py  0008_rename_date_flight_publish_date.py  0009_airport_iata_code_airport_icao_code_alter_address_id_and_more.py  0009_remove_airlineticket_airline_ticket_type_and_more.py  0010_alter_address_id_alter_aircraft_id_and_more.py  0010_alter_airlineticket_aircraft_seat_type.py  0011_alter_airport_iata_code_alter_airport_icao_code.py  0011_alter_customerticket_canceled.py
app/airline_tickets/services/: account_service.py  app_service.py
config/: urls.py
config/settings/: base.py  development.py
db/: dump-airline_tickets-202407301631.sql
(+13 files in other folders)
