[tool.poetry]
name = "django-htmx-tutorial-app"
authors = ["ZEKE320"]
description = "A Django app that demonstrates how to use htmx with Django"
version = "0.0.0"
packages = [{ include = "airline_tickets", from = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "*"
django = "^5.0.6"
psycopg = { extras = ["binary"], version = "^3.1.19" }
pydantic = "^2.8.2"
ruff = "^0.5.5"
django-htmx = "^1.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[tool.pylint.MASTER]
disable = ["wrong-import-position", "line-too-long"]
